--- a/templates/submit.html
+++ b/templates/submit.html
@@ -33,7 +33,7 @@
 			<h2>submit new public art</h2>
 			<div class="row">
 				<div class="col-md-12" style="padding-bottom:10px">
-					<h4>Upload image</h4>
+					<h4>Upload image*</h4>
 					<input class="form-control" id="image" name="Upload image file" type="file">
 				</div>
 			</div>
@@ -47,10 +47,43 @@
 
 			<div class="row">
 				<div class="col-md-12" style="padding-bottom:10px;">
-					<h4>Location</h4>
-					<input class="form-control" id="location" name="location" placeholder="location" type="text" required>
+					<h4>Artist*</h4>
+					<input class="form-control" id="artist" name="artist" placeholder="artist" type="text" required>
 				</div>
 			</div>
+
+			<div class="row">
+				<div class="col-md-8" style="padding-bottom:10px; padding-right:10px;">
+					<h4>Location*</h4>
+					<input class="form-control" id="location" name="location" placeholder="location" type="text" required>
+				</div>
+				<div class="col-md-4" style="padding-bottom:10px;">
+				<h4>Neighborhood</h4>
+					<input class="form-control" id="neighborhood" name="neighborhood" placeholder="neighborhood" type="text">
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-md-4" style="padding-bottom:10px; padding-right:10px;">
+				<h4>Date Created</h4>
+					<input class="form-control" id="date" name="date" placeholder="date" type="text">
+				</div>
+				<div class="col-md-4" style="padding-bottom:10px; padding-right:10px;">
+				<h4>Genre*</h4>
+					<input class="form-control" id="genre" name="genre" placeholder="genre" type="genre">
+				</div>
+				<div class="col-md-4" style="padding-bottom:10px; padding-right:10px;">
+				<h4>Size</h4>
+					<form><div class="form-group">
+						<select class="form-control" id="formControlSelect1">
+						  <option>small</option>
+						  <option>medium</option>
+						  <option>large</option>
+						  <option>extra large</option>
+						</select>
+					</div>
+					</form>
+				</div>
 
 			<div class="row">
 				<div class="col-sm-12" style="padding-bottom:30px;">
@@ -59,29 +92,22 @@
 			</div>	
 
 		</div>
-
+		</div>
 		<!-- How to Submit -->
 		<div class="col-md-4" style="padding-bottom:30px;">
 		
 			<h3>How to submit:</h3>
-			<p>Liqui occus assint et ari diatetus sanis expliquiati reperfe riorene caborecto vid entur re dolorem harunt parit, omnim et earit, nobist que lamenis estiunt eum asperat litat quiatem et aut aliquo doluptatio. Is venihilita quam ratur sequist quiat des autatur?<br>
-Minto que nus abo. Excea voluptat modis eum- qui assi dit venihic aepelisci id eatquatur sam, aut qui con escid quiscimin renis eos dolupta- tiHarum rem quaesto iliquas re si doluptaspid modit unt arum endi</p>
-
+			<p>Please fill out the submission form to the best of your ability. Fields marked by an asterisk are required, but it is recommended that as many fields as possible be completed.</p>
 		</div>
 
 	</div>
-
-
 	</div>
-
-
+	
 	<!-- Footer -->
 	<footer class="container-fluid bg-4 text-center">
 		<p>© boston art 2018 | all rights reserved</P.
 	</footer>
 
 </body>
-
-
 
 </html>
