--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -3,7 +3,6 @@ body {
 }
 
 .jumbotron {
-
 	position: relative;
 	background-size: cover;
 	background-color: #949ff7;
@@ -36,15 +35,6 @@ p {
 	font-family: "Helvetica Neue";
 }
 
-.col-md-4 {
-	padding-right: 30px;
-	padding-left: 30px;
-}
-
-.col-md-8 {
-	padding-right: 30px;
-	padding-left: 30px;
-}
 
 .bg-4 {
 	background-color: #949ff7;
@@ -53,7 +43,20 @@ p {
 	padding-bottom: 50px;
 }
 
-img {
+#art_img {
+	object-fit: cover;
+	width: 100%;
+	height: 400px;
+}
 
-	height: 350px;
+#about_cont {
+	padding-left: 50px;
+	padding-right: 50px;
+	padding-bottom: 50px;
+}
+
+#about_photo {
+	height: 250px;
+	max-width: 100%;
+	object-fit: cover;
 }
