--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -47,11 +47,10 @@ p {
 	object-fit: cover;
 	width: 100%;
 	height: 400px;
+	background-color: #DCDCDC;
 }
 
 #about_cont {
-	padding-left: 50px;
-	padding-right: 50px;
 	padding-bottom: 50px;
 }
 
@@ -59,4 +58,5 @@ p {
 	height: 250px;
 	max-width: 100%;
 	object-fit: cover;
+
 }
