--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,13 @@
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>	
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-	<link rel="stylesheet" href="{{ url_for('static', filename='stylesheet.css') }}" type="text/css">
+	<link rel="stylesheet" href="{{ url_for('static', filename='stylesheet.css') }}"
+	type="text/css">
 
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+	integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
 	<meta charset="UTF-8">
 	<title>Home</title>
@@ -18,27 +20,17 @@
 
 	<!-- Jumbotron -->
 	<div class="jumbotron text-center">
-	
+
 		<h1>boston public art</h1>
 		<p>Discover new art in Boston, completely free.</p>
-		<p><a id="art_img" href="{{ url_for('paintings') }}">home</a>  <a href="{{ url_for('about') }}">about</a>  <a href="{{ url_for('submit') }}">submit</a></p>
+		<p><a id="art_img" href="{{ url_for('paintings') }}">home</a>
+			<a href="{{ url_for('about') }}">about</a>
+			<a href="{{ url_for('submit') }}">submit</a></p>
 
 	</div>
 
-	<!-- TODO: Once DB is set up, will need to loop and insert DB info -->
-
-	<!-- Navigation bar -->
-<!--
-	<div class="container-fluid">
-	<div class="row">
-		<div id="navbar" class="col-md-12" style="background-color:white;">
-			<h3>This is where the navigation bar/toggle will go!</h3>
-		</div>
-	</div>
-	</div>
--->
 	<!-- Artist information -->
-	
+
 	{% if result %}
 
 	{% for row in result %}
@@ -46,61 +38,37 @@
 	<div class="row">
 		<div class="col-md-12" style="padding-bottom:30px; padding-left:30px;">
 		<h3><b>{{ row[1] }}</b></h3>
-	
-			<div class="row">	
+
+			<div class="row">
 			<div class="col-md-6">
 
-			<img id="art_img" src="{{ url_for('static', filename='boston.jpg') }}">
+			<img id="art_img" src=" {{ row[9] }}">
 
 			</div>
 			<div id="artist_descr" class="col-md-6" style="padding-left:30px; padding-right:30px;">
+
 				<h4>By {{ row[5] }} {{ row[6] }}</h4>
 				<h5><i class="fas fa-map-marker-alt"></i> {{ row[3] }}</h5>
 				<h5>Find it at the {{ row[2] }} neighborhood</h5><br>
 				<h5><b>Description</b></h5>
-				
-				<p>{{ row [8] }}</p><br>
-				
-				<h5>Created on: {{ row[0] }}</h5>
-				<h5>Art features: {{ row[4] }} size, {{ row[7] }} medium</h5>
+
+				{{ row [8] }}<br><br>
+
+				<b>Created in:</b> {{ row[0] }}
+				<br><br>
+				<b>Art Features:</b><br>
+				<p><b><i class="fas fa-paint-brush"></i> Size:</b> {{ row[4] }}<br>
+					 <b><i class="fas fa-paint-brush"></i> Medium:</b> {{ row[7] }}</p>
 
 			</div>
-			</div>		
+			</div>
 
 		</div>
 	</div>
 	</div>
-	
-	{% endfor %}	
+
+	{% endfor %}
 	{% endif %}
-
-<!--
-	<br><br>
-	<center><h2>Check out this dope ass placeholder table</h2></center>
-	<table class="table" id="painting" style="width:100%">
-
-	{% if result %}
-	<thead>
-    	<tr>
-        	<th>Painting ID</th>
-        	<th>Title</th>
-        	<th>Year</th>
-		<th>Artist ID</th>
-    	</tr>
-	</thead>
-	<tbody>
-    	{% for row in result %}
-    	<tr>
-        	<td> {{ row[0] }}</td>
-        	<td> {{ row[1] }}</td>
-        	<td> {{ row[2] }}</td>
-		<td> {{ row[3] }}</td>
-    	</tr>
-    	{% endfor %}
-    	{% endif %}
-	</tbody>
-	</table>
--->
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
